--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,28 @@
-<%= link_to "Home", root_path %>
-<%= link_to "About", about_path %>
+<div class="navbar navbar-fixed-top">
+	<div class="navbar-inner">
+		
+		<div class="container">
+			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</a>
+
+			<a href="/" class="brand">One Month Rails</a>
+
+			<div class="nav-collapse collapse">
+				<ul class="nav">
+					<li><%= link_to "Home", root_path %></li>
+					<li><%= link_to "About", about_path %></li>
+				</ul>
+			</div>
+			<div class="nav-collapse collapse pull-right">
+				<ul class="nav">
+					<li><%= link_to "Login", "#" %></li>
+				</ul>
+			</div>
+
+		</div>
+
+	</div>
+</div>
