--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 			</a>
 
-			<a href="/" class="brand">One Month Rails</a>
+			<%= link_to "One Month Rails", root_path, class: "brand" %>
 
 			<div class="nav-collapse collapse">
 				<ul class="nav">
@@ -16,9 +16,16 @@
 					<li><%= link_to "About", about_path %></li>
 				</ul>
 			</div>
+			
 			<div class="nav-collapse collapse pull-right">
 				<ul class="nav">
-					<li><%= link_to "Login", "#" %></li>
+					<% if user_signed_in? %>
+						<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+						<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+					<% else %>
+						<li><%= link_to "Login", new_user_session_path %></li>
+					<% end %>
+					
 				</ul>
 			</div>
 
