--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,14 @@
 
 <div class="container">
 	
+	<% flash.each do |name, msg| %>
+		<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+	<% end %>
+
 	<%= yield %>
 
 	<%= render 'layouts/footer' %>
-	
+
 </div>
 
 </body>
