--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					<li><%= link_to "Home", root_path %></li>
+					<li><%= link_to "Pins", pins_path %></li>
 					<li><%= link_to "About", about_path %></li>
 				</ul>
 			</div>
