--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,9 +1,11 @@
-<tr>
-  <td><%= image_tag pin.image(:medium) %></td>
-  <td><%= pin.description %></td>
-  <td><%= link_to 'Show', pin %></td>
-  <% if current_user == pin.user %>
-	  <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-	  <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-	 <% end %>
-</tr>
+<div class="box">
+	<%= link_to (image_tag(pin.image.url(:medium))), pin %>
+	<p class="description"><%= pin.description %></p>
+	<p><strong>Posted by <%= pin.user.name%> </strong></p>
+	<% if current_user == pin.user %>
+		<p class="">
+			<%= link_to 'Edit', edit_pin_path(pin) %>
+			<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+		</p>
+	<% end %>
+</div>
